Changelog
=========

4.3-dev - (unreleased)
----------------------

4.2 - (2012-02-06)
------------------
 * no changes

4.1 - (2012-02-06)
------------------
* Bug fix: Added dependencies to setup.py
  [voineali]

4.0-dev - (2011-11-06)
------------------
* Bug fix: proper parsing of html entities by using an html parser instead of an xml one 
  [ichimdav #4523]
* Bug fix: cleaned spaces defined as &nbsp that can't be read as xml
  [ichimdav #4271]
* Cleanup: fixed all pylint, pyflakes violations
  [voineali #4121]
* Feature: added upgrade steps
  [voineali @4392]
* Feature: Plone 4.0.4 compatible release
  [tiberich #4121]

0.6 - (2011-04-07)
------------------
* Bug fix: clean epub import to prevent navigation portlet from miss-behaving
  [ichimdav #4242]
* Bug fix: fixes #4242 Removed / clean up, the portlet epub and toc,
  we can use standard plone nav
  [demarant]
* Feature: force documents/chapters not to be renamed after title change
  [demarant]

0.5 - (2011-03-17)
------------------
* Bug fix: fixed wrong anchors that spanned over paragraphs
  [ichimdav #4196]
* Bug fix: added translation domain to ZCML files
  [voineali #4139]

0.4 - (2011-03-09)
------------------
* Change: cleaned test, added doctypes, fixed pylint violations warnings
  [ichimdav #4140]

0.3 - (2011-03-01)
------------------
* Change: surpressed error messages with an info status message
  [ichimdav #3883]
* Bug fix: fix epub file import
  [ichimdav #3883]

0.2 - (2010-10-29)
------------------
* Feature: add-to-folder menu item
  [thuliper #3627]
* Bug fix: image link fixes
  [thuliper #3711]

0.1 - (2010-10-11)
------------------
* Initial release
